package com.example.orchestation.DTO;

import java.util.List;

public class WorkSpaceResponseDto {
    
    private String Name;
    private String Description;
    private List<String> TeamNames;

}
